Fix overflow issues

--- a/website/static/website/css/main.css
+++ b/website/static/website/css/main.css
@@ -21,6 +21,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333;
+  word-wrap: break-word;
 }
 .w-clearfix:before,
 .w-clearfix:after {
